# SLICOT-Reference

./: CMakeLists.txt
c_interface/: CMakeLists.txt  generate-c-headers.py
cmake/: SlicotConfig.cmake.in  slicot_sources.cmake
include/slicot/: CMakeLists.txt
src/: CMakeLists.txt
tools/: generate-c-headers.py  generate_cmake_files.sh
